# firstActixProject

./: .gitignore  Cargo.toml  Dockerfile  README.md  database.db  vercel.json
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/config/: database.rs  settings.rs
src/entity/: user.rs
src/models/: url.rs
src/routes/: home_routes.rs
src/routes/handlers/: home_handler.rs
src/utils/: api_response.rs  constants.rs  mod.rs  shortner.rs
