[package]
name = "web_app_using_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
env_logger = "0.11.9"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros"
] }

tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"


